Incorporate surefire plugin changes from ikardovskiy, add explicit version to plugin